--- a/requirements.txt
+++ b/requirements.txt
@@ -49,3 +49,8 @@ urllib3==1.26.4
 uvicorn==0.13.4
 Werkzeug==1.0.1
 yarl==1.6.3
+PyJWT~=2.0.1
+decouple~=0.0.7
+config~=0.5.0.post0
+mysql-connector-python~=8.0.24
+passlib~=1.7.4
